2017-06-14  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-724

	* src/parser.cc (parse_matrix):

	For empty matrices, ncols was set to 1. Fixed and cleaned up code. Bug
	reported by Patrick.

	* controlfiles/CMakeLists.txt:

	Use OEM_SUPPORT variable instead of NO_OEM.

2017-06-14  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-723

	* src/workspace.cc: Somne extension of description of the
	covariance matrices used by OEM.

	* controlfiles/artscomponents/oem/TestOEM.arts: A small extension
	to indicate that x, yf, and jacobian can both be empty or
	pre-calculated.

2017-06-14  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-722

	* controlfiles/artscomponents/oem/TestOEM.arts: Added missing OEM test.

2017-06-13  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-721

	* controlfiles/testdata/ozone-line.xml: Moved from groundbased
	tests to be reused for OEM testing.

	* controlfiles/artscomponents/groundbased/*.arts: Updated position
	of ozone line file.

	* controlfiles/CMakeLists.txt: Added new OEM test.

	* src/m_oem.cc(oem_checks): Extended oem_checks to properly handle
	missing or precomputed x, yf, jacobian.

2017-06-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-720

	* doc/uguide/cloudradar.tex: Slight reorganisation and wrote a
	basic description of Jacobian calculations. Even stuff not yet
	implemented!

2017-06-13  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-719

	* src/m_oem.cc(OEM_checks): Use .empty() member function to test
	for emptiness of matrices.

	* src/m_oem.cc: Fixed calculation of covmat_so. Renamed avkCalc,
	covmat_soCalc for consistency. Added covmat_ssCalc.

	* src/methods.cc: Updated entries for avkCalc, covmat_soCalc,
	covmat_ssCalc.

	* src/workspace.cc: Updated entries for avk, covmat_so, covmat_ss.

2017-06-13 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-719

	* src/m_cloudradar, m_cloudbox.cc (psdMH97,